apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/part-of: microservices-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: http
    name: http
