apps/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/part-of: microservices-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
  - http:
      paths:
      - path: /api/node
        pathType: Prefix
        backend:
          service:
            name: backend-node
            port:
              name: http
      - path: /api/python
        pathType: Prefix
        backend:
          service:
            name: backend-python
            port:
              name: http
      - path: /api/java
        pathType: Prefix
        backend:
          service:
            name: backend-java
            port:
              name: http
